--- a/.dromelib.yml
+++ b/.dromelib.yml
@@ -1,6 +1,9 @@
 # app:
 #   name: RailsOnDrome
 environment_vars:
+  neo4j_server: NEO4J_SERVER
+  neo4j_username: NEO4J_USERNAME
+  neo4j_password: NEO4J_PASSWORD
   gmail_username: GMAIL_USERNAME
   gmail_password: GMAIL_PASSWORD
   gmail_from: GMAIL_FROM
@@ -10,9 +13,10 @@ environment_vars:
   stream_secret: STREAM_SECRET
   twitter_key: CONSUMER_KEY
   twitter_secret: CONSUMER_SECRET
-  neo4j_server: NEO4J_SERVER
-  neo4j_username: NEO4J_USERNAME
-  neo4j_password: NEO4J_PASSWORD
+# neo4j:
+#  server: ourdb.stations.graphenedb.com:24789
+#  username: myusername
+#  password: mypassword
 # gmail:
 #   username: nando
 #   password: odnan
